# hyrise

./: .gitignore  start_docker.sh
src/: CMakeLists.txt
src/benchmarklib/: abstract_table_generator.cpp  benchmark_table_encoder.cpp
src/lib/: CMakeLists.txt  constant_mappings.cpp
src/lib/import_export/binary/: binary_parser.cpp  binary_parser.hpp  binary_writer.cpp  binary_writer.hpp
src/lib/operators/: print.cpp
src/lib/operators/table_scan/: abstract_dereferenced_column_table_scan_impl.hpp  abstract_table_scan_impl.hpp  column_between_table_scan_impl.cpp  column_between_table_scan_impl.hpp  column_vs_value_table_scan_impl.cpp  column_vs_value_table_scan_impl.hpp
src/lib/storage/: _gdd_segment_v1_fixed.cpp  _gdd_segment_v1_fixed.hpp  base_gdd_segment.hpp  create_iterable_from_segment.hpp  create_iterable_from_segment.ipp  encoding_type.hpp  gdd_segment.cpp  gdd_segment.hpp  gdd_segment_old.cpp  gdd_segment_old.hpp  gdd_segment_v1_fixed.cpp  gdd_segment_v1_fixed.hpp  gdd_segment_valuesegment.cpp  resolve_encoded_segment_type.hpp  segment_encoding_utils.cpp
src/lib/storage/dictionary_segment/: attribute_vector_iterable.hpp  dictionary_encoder.hpp  dictionary_segment_iterable.hpp
src/lib/storage/gdd_segment/: attribute_vector_iterable.hpp  gdd_encoder.hpp  gdd_lsb.hpp  gdd_segment_iterable.hpp  old_gdd_encoder.hpp
src/lib/storage/gdd_segment/gdd_lsb/: gdd_lsb.hpp  permute.hpp
src/lib/storage/gdd_segment/v1-fixed/: gdd_encoder.hpp  gdd_segment_iterable.hpp
src/lib/storage/gdd_segment_old/: gdd_encoder.hpp  gdd_segment_iterable.hpp  old_gdd_segment_iterable.hpp
src/lib/storage/reference_segment/: reference_segment_iterable.hpp
src/lib/storage/segment_iterables/: create_iterable_from_attribute_vector.hpp
src/test/: CMakeLists.txt
